# schedules/generatedOpenapi/go/api.go
@@ -1,11 +1,0 @@
-// Code generatedOpenapi by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
-
-/*
- * Schedules API
- *
- * API для работы с расписаниями
- *
- * API version: 1.0.0
- */
-
-package openapi
