# schedules/internal/server/grpc/common.go
@@ -1,0 +1,5 @@
+package Schedulegrpc
+
+import "github.com/tummerk/golang/schedules/pkg/contextx"
+
+var logger = contextx.LoggerFromContextOrDefault
