# schedules/internal/server/rest/common.go
@@ -1,0 +1,5 @@
+package rest
+
+import "github.com/tummerk/golang/schedules/pkg/contextx"
+
+var logger = contextx.LoggerFromContextOrDefault
