# schedules/pkg/rest/types.gen.go
@@ -1,0 +1,43 @@
+// Package rest provides primitives to interact with the openapi HTTP API.
+//
+// Code generated by github.com/deepmap/oapi-codegen version v1.16.3 DO NOT EDIT.
+package rest
+
+// Schedule defines model for schedule.
+type Schedule struct {
+	MedicamentName string   `json:"medicamentName"`
+	Takings        []string `json:"takings"`
+}
+
+// Taking defines model for taking.
+type Taking struct {
+	Name string `json:"name"`
+	Time string `json:"time"`
+}
+
+// Takings defines model for takings.
+type Takings = []Taking
+
+// GetNextTakingsParams defines parameters for GetNextTakings.
+type GetNextTakingsParams struct {
+	// UserId Идентификатор пользователя
+	UserId string `form:"user_id" json:"user_id"`
+}
+
+// GetScheduleParams defines parameters for GetSchedule.
+type GetScheduleParams struct {
+	// UserId Идентификатор пользователя
+	UserId string `form:"user_id" json:"user_id"`
+
+	// ScheduleId Идентификатор расписания
+	ScheduleId string `form:"schedule_id" json:"schedule_id"`
+}
+
+// GetSchedulesParams defines parameters for GetSchedules.
+type GetSchedulesParams struct {
+	// UserId Идентификатор пользователя
+	UserId int64 `form:"user_id" json:"user_id"`
+}
+
+// CreateScheduleJSONRequestBody defines body for CreateSchedule for application/json ContentType.
+type CreateScheduleJSONRequestBody = Schedule
